6 files modified, 15 added

--- a/assignment1/alerts_progress.html
+++ b/assignment1/alerts_progress.html
@@ -127,88 +127,112 @@
       <hr />
     </header>
     <div class="container">
-      <div class="d-flex row-hl">
-        <div class="mr-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
+      <div class="alert alert-danger">
+        <strong>Primary</strong> Blog post added
+      </div>
+
+      <div class="alert alert-success">
+        <strong>Secondary</strong> Blog post added
+      </div>
+
+      <div class="alert alert-primary">
+        <strong>Success</strong> Blog post added
+      </div>
+
+      <div class="alert alert-secondary">
+        <strong>Danger</strong> Please check the log files
+      </div>
+
+      <div class="alert alert-info">
+        <strong>Info</strong> You have a new message
+      </div>
+
+      <div class="alert alert-dismissible">
+        <strong>Warning</strong> Please check the log files
+      </div>
+
+      <div class="alert alert-dark">
+        <strong>Light</strong> Please check the log files
+      </div>
+
+      <div class="alert alert-light">
+        <strong>Dark</strong> Please check the log files
+      </div>
+
+      <div class="alert alert-success alert-dismissible">
+        <button class="close" type="button" data-dismiss="alert">
+          <span>&times;</span>
+        </button>
+        <strong>Dismissable</strong> Blog post added
+      </div>
+
+      <div class="alert alert-success">
+        <h4 class="alert-heading">Congrats!</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+          dignissimos eius, sit quo assumenda totam commodi ipsum saepe
+          molestias eligendi exercitationem repudiandae qui facilis deserunt
+          non, harum ab quam? Cumque
+        </p>
+        <hr />
+        <p class="mb-0">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, odio?
+        </p>
       </div>
 
       <br />
       <br />
 
-      <div class="d-flex row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="ml-auto p-2 item-hl">Flex item</div>
+      <div class="progress">
+        <div class="progress-bar" style="width: 45%"></div>
       </div>
-
       <br />
-      <br />
-
-      <div class="d-flex flex-column row-hl">
-        <div class="mb-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
+      <div class="progress">
+        <div class="progress-bar" style="width: 65%">65%</div>
       </div>
-
       <br />
-      <br />
-
-      <div class="d-flex flex-column row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="mt-auto p-2 item-hl">Flex item</div>
+      <div class="progress">
+        <div class="progress-bar bg-success" style="width: 75%"></div>
       </div>
-
       <br />
-      <br />
-
-      <div class="d-flex flex-nowrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
+      <div class="progress">
+        <div class="progress-bar bg-info" style="width: 25%"></div>
       </div>
-
       <br />
-      <br />
-
-      <div class="d-flex flex-wrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
+      <div class="progress">
+        <div class="progress-bar bg-warning" style="width: 55%"></div>
       </div>
-
-      <br />
       <br />
 
-      <div class="d-flex row-hl">
-        <div class="order-3 p-2 item-hl">First flex item</div>
-        <div class="order-2 p-2 item-hl">Second flex item</div>
-        <div class="order-1 p-2 item-hl">Third flex item</div>
+      <div class="progress" style="height: 1px">
+        <div class="progress-bar bg-success" style="width: 65%"></div>
+      </div>
+      <br />
+
+      <div class="progress">
+        <div
+          class="progress-bar bg-danger progress-bar-striped"
+          style="width: 55%"
+        ></div>
+      </div>
+      <br />
+
+      <div class="progress">
+        <div
+          class="
+            progress-bar
+            bg-info
+            progress-bar-striped progress-bar-animated
+          "
+          style="width: 65%"
+        ></div>
+      </div>
+      <br />
+
+      <div class="progress">
+        <div class="progress-bar bg-warning" style="width: 55%"></div>
+        <div class="progress-bar bg-success" style="width: 55%"></div>
+        <div class="progress-bar bg-primary" style="width: 55%"></div>
       </div>
     </div>
 
@@ -229,5 +253,11 @@
       integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
       crossorigin="anonymous"
     ></script>
+
+    <script>
+      $('#myAlert').on('closed.bs.alert', function () {
+        console.log('Alert closed...');
+      });
+    </script>
   </body>
 </html>
