--- a/assignment1/colors_background.html
+++ b/assignment1/colors_background.html
@@ -126,90 +126,70 @@
       </div>
       <hr />
     </header>
+
     <div class="container">
-      <div class="d-flex row-hl">
-        <div class="mr-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
+      <p class="text-dark">Text Primary Color</p>
+      <p class="text-light">Text Secondary Color</p>
+      <p class="text-danger">Text Success Color</p>
+      <p class="text-success">Text Info Color</p>
+      <p class="text-primary">Text Warning Color</p>
+      <p class="text-secondary">Text Danger Color</p>
+      <p class="text-light">Text Light Color</p>
+      <p class="text-info">Text Dark Color</p>
+      <p class="text-white">Text White Color</p>
+      <p class="text-muted">Text Muted</p>
+      <p class="text-black-50">Text Black 50</p>
+      <p class="text-dark">Text White 50</p>
 
       <br />
       <br />
 
-      <div class="d-flex row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="ml-auto p-2 item-hl">Flex item</div>
-      </div>
+      <p>
+        <a href="#" class="text-dark">Primary link</a>
+      </p>
+      <p>
+        <a href="#" class="text-secondary">Secondary link</a>
+      </p>
+      <p>
+        <a href="#" class="text-success">Success link</a>
+      </p>
+      <p>
+        <a href="#" class="text-info">Info link</a>
+      </p>
+      <p>
+        <a href="#" class="text-warning">Warning link</a>
+      </p>
+      <p>
+        <a href="#" class="text-danger">Danger link</a>
+      </p>
+      <p>
+        <a href="#" class="text-light">Light link</a>
+      </p>
+      <p>
+        <a href="#" class="text-dark">Dark link</a>
+      </p>
+      <p>
+        <a href="#" class="text-muted">Muted link</a>
+      </p>
+      <p>
+        <a href="#" class="text-dark">White link</a>
+      </p>
 
       <br />
       <br />
 
-      <div class="d-flex flex-column row-hl">
-        <div class="mb-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
+      <div class="bg-primary text-white">Background Primary Color</div>
+      <div class="bg-secondary">Background Secondary Color</div>
+      <div class="bg-light">Background Success Color</div>
+      <div class="bg-danger">Background Info Color</div>
+      <div class="bg-warning">Background Warning Color</div>
+      <div class="bg-danger">Background Danger Color</div>
+      <div class="bg-light">Background Light Color</div>
+      <div class="bg-dark text-light">Background Dark Color</div>
+      <div class="bg-white">Background White Color</div>
+      <div class="bg-transparent">Background Transparent</div>
 
-      <br />
-      <br />
-
-      <div class="d-flex flex-column row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="mt-auto p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-nowrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-wrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex row-hl">
-        <div class="order-3 p-2 item-hl">First flex item</div>
-        <div class="order-2 p-2 item-hl">Second flex item</div>
-        <div class="order-1 p-2 item-hl">Third flex item</div>
-      </div>
+      <p class="invisible">Hello</p>
     </div>
 
     <div style="margin-top: 500px"></div>
