--- a/assignment1/list_groups_badges.html
+++ b/assignment1/list_groups_badges.html
@@ -126,90 +126,90 @@
       </div>
       <hr />
     </header>
+
     <div class="container">
-      <div class="d-flex row-hl">
-        <div class="mr-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
+      <ul class="list-group mb-5">
+        <li class="list-group-item">My List Item 1</li>
+        <li class="list-group-item active">My List Item 2</li>
+        <li class="list-group-item">My List Item 3</li>
+        <li class="list-group-item">My List Item 4</li>
+        <li class="list-group-item">My List Item 5</li>
+      </ul>
 
-      <br />
-      <br />
+      <ul class="list-group mb-5">
+        <a class="list-group-item" href="#">My List Item 1</a>
+        <a class="list-group-item" href="#">My List Item 2</a>
+        <a class="list-group-item active" href="#">My List Item 3</a>
+        <a class="list-group-item" href="#">My List Item 4</a>
+        <a class="list-group-item" href="#">My List Item 5</a>
+      </ul>
 
-      <div class="d-flex row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="ml-auto p-2 item-hl">Flex item</div>
-      </div>
+      <ul class="list-group mb-5">
+        <li class="list-group-item">Regular List Item</li>
+        <li class="list-group-item list-group-item-danger">
+          Primary List Item
+        </li>
+        <li class="list-group-item list-group-item-secondary">
+          Secondary List Item
+        </li>
+        <li class="list-group-item list-group-item-success">
+          Success List Item
+        </li>
+        <li class="list-group-item list-group-item-info">Info List Item</li>
+        <li class="list-group-item list-group-item-warning">
+          Warning List Item
+        </li>
+        <li class="list-group-item list-group-item-dark">Danger List Item</li>
+        <li class="list-group-item list-group-item-light">Light List Item</li>
+        <li class="list-group-item list-group-item-primary">Dark List Item</li>
+      </ul>
 
-      <br />
-      <br />
+      <!-- FLUSH LIST GROUP -->
+      <ul class="list-group list-group-flush mb-5">
+        <li class="list-group-item">My List Item 1</li>
+        <li class="list-group-item">My List Item 2</li>
+        <li class="list-group-item">My List Item 2</li>
+        <li class="list-group-item active">My List Item 4</li>
+        <li class="list-group-item">My List Item 5</li>
+      </ul>
 
-      <div class="d-flex flex-column row-hl">
-        <div class="mb-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
+      <!-- BADGE -->
+      <ul class="list-group mb-5">
+        <li class="list-group-item">My List Item One</li>
+        <li
+          class="
+            list-group-item
+            d-flex
+            justify-content-between
+            align-items-center
+          "
+        >
+          My List Item Two center
+          <span class="badge badge-primary">30</span>
+        </li>
+        <li class="list-group-item">My List Item Three</li>
+        <li class="list-group-item">My List Item Four</li>
+        <li class="list-group-item">My List Item Five</li>
+      </ul>
 
-      <br />
-      <br />
-
-      <div class="d-flex flex-column row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="mt-auto p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-nowrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-wrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex row-hl">
-        <div class="order-3 p-2 item-hl">First flex item</div>
-        <div class="order-2 p-2 item-hl">Second flex item</div>
-        <div class="order-1 p-2 item-hl">Third flex item</div>
-      </div>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item active">Home</li>
+      </ol>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="#">Home</a>
+        </li>
+        <li class="breadcrumb-item active">Users</li>
+      </ol>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="#">Home</a>
+        </li>
+        <li class="breadcrumb-item">
+          <a href="#">Users</a>
+        </li>
+        <li class="breadcrumb-item active">Brad</li>
+      </ol>
     </div>
 
     <div style="margin-top: 500px"></div>
