--- a/assignment1/media_object.html
+++ b/assignment1/media_object.html
@@ -127,89 +127,162 @@
       <hr />
     </header>
     <div class="container">
-      <div class="d-flex row-hl">
-        <div class="mr-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
+      <div class="media">
+        <img
+          class="mr-3 mt-3"
+          src="https://source.unsplash.com/random/90x90"
+          alt="image1"
+        />
+        <div class="media-body">
+          <h4>Media heading</h4>
+          Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
+          scelerisque ante sollicitudin. Cras purus odio, vestibulum in
+          vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+          vulputate fringilla. Donec lacinia congue felis in faucibus.
+        </div>
       </div>
 
       <br />
       <br />
 
-      <div class="d-flex row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="ml-auto p-2 item-hl">Flex item</div>
+      <div class="media">
+        <img
+          class="mr-3"
+          src="https://source.unsplash.com/random/90x91"
+          alt="image1"
+        />
+        <div class="media-body">
+          <h3>Media heading</h3>
+          Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
+          scelerisque ante sollicitudin. Cras purus odio, vestibulum in
+          vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+          vulputate fringilla. Donec lacinia congue felis in faucibus.
+
+          <div class="media mt-4">
+            <a class="pr-3" href="#">
+              <img
+                src="https://source.unsplash.com/random/90x92"
+                alt="image1"
+              />
+            </a>
+            <div class="media-body">
+              <h2>Nested Media</h2>
+              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
+              scelerisque ante sollicitudin. Cras purus odio, vestibulum in
+              vulputate at, tempus viverra turpis. Fusce condimentum nunc ac
+              nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            </div>
+          </div>
+        </div>
       </div>
 
       <br />
       <br />
 
-      <div class="d-flex flex-column row-hl">
-        <div class="mb-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
+      <div class="media">
+        <img
+          class="mr-3 align-self-start"
+          src="https://source.unsplash.com/random/90x93"
+          alt="image1"
+        />
+        <div class="media-body">
+          <h4>Top aligned media</h4>
+          <p>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
+            scelerisque ante sollicitudin. Cras purus odio, vestibulum in
+            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+            vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </p>
+        </div>
       </div>
 
       <br />
       <br />
 
-      <div class="d-flex flex-column row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="mt-auto p-2 item-hl">Flex item</div>
+      <div class="media">
+        <img
+          class="mr-3 align-self-center"
+          src="https://source.unsplash.com/random/90x94"
+          alt="image1"
+        />
+        <div class="media-body">
+          <h4>Center aligned media</h4>
+          <p>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
+            scelerisque ante sollicitudin. Cras purus odio, vestibulum in
+            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+            vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </p>
+        </div>
       </div>
 
       <br />
       <br />
 
-      <div class="d-flex flex-nowrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
+      <div class="media">
+        <img
+          class="mr-3 align-self-end"
+          src="https://source.unsplash.com/random/90x95"
+          alt="image1"
+        />
+        <div class="media-body">
+          <h3>Bottom aligned media</h3>
+          <p>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
+            scelerisque ante sollicitudin. Cras purus odio, vestibulum in
+            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+            vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </p>
+        </div>
       </div>
 
       <br />
       <br />
 
-      <div class="d-flex flex-wrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex row-hl">
-        <div class="order-3 p-2 item-hl">First flex item</div>
-        <div class="order-2 p-2 item-hl">Second flex item</div>
-        <div class="order-1 p-2 item-hl">Third flex item</div>
-      </div>
+      <ul class="list-unstyled">
+        <li class="media">
+          <img
+            class="mr-3"
+            src="https://source.unsplash.com/random/90x96"
+            alt="image1"
+          />
+          <div class="media-body">
+            <h3>List based media object</h3>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
+            scelerisque ante sollicitudin. Cras purus odio, vestibulum in
+            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+            vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
+        </li>
+        <li class="media">
+          <img
+            class="mr-3"
+            src="https://source.unsplash.com/random/90x97"
+            alt="image1"
+          />
+          <div class="media-body">
+            <h3>List based media object</h3>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
+            scelerisque ante sollicitudin. Cras purus odio, vestibulum in
+            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+            vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
+        </li>
+        <li class="media">
+          <img
+            class="mr-3"
+            src="https://source.unsplash.com/random/90x98"
+            alt="image1"
+          />
+          <div class="media-body">
+            <h4>List based media object</h4>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
+            scelerisque ante sollicitudin. Cras purus odio, vestibulum in
+            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+            vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
+        </li>
+      </ul>
     </div>
 
     <div style="margin-top: 500px"></div>
