--- a/assignment1/sizing.html
+++ b/assignment1/sizing.html
@@ -126,90 +126,66 @@
       </div>
       <hr />
     </header>
+
     <div class="container">
-      <div class="d-flex row-hl">
-        <div class="mr-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
+      <div class="bg-success p-3 w-75">Width 75%</div>
+      <div class="bg-success p-3 w-30">Width 30%</div>
+      <div class="bg-success p-3 w-45">Width 45%</div>
+      <div class="bg-success p-3 w-100">Width 100%</div>
+      <div class="bg-success p-3 w-auto">Width Auto</div>
+
+      <br />
+      <br />
+
+      <div style="height: 300px; border: 1px solid blue">
+        <div class="bg-primary d-inline-block h-95">Height 95%</div>
+        <div class="bg-primary d-inline-block h-60">Height 60%</div>
+        <div class="bg-primary d-inline-block h-55">Height 55%</div>
+        <div class="bg-primary d-inline-block h-100">Height 100%</div>
+        <div class="bg-primary d-inline-block h-auto">Height Auto</div>
       </div>
 
       <br />
       <br />
 
-      <div class="d-flex row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="ml-auto p-2 item-hl">Flex item</div>
+      <div class="p-3 mb-2 bg-light border">Regular</div>
+      <div class="p-3 mb-2 bg-light border-top">Border Top</div>
+      <div class="p-3 mb-2 bg-light border-bottom">Border Bottom</div>
+      <div class="p-3 mb-2 bg-light border-right">Border Right</div>
+      <div class="p-3 mb-2 bg-light border-left">Border Left</div>
+
+      <br />
+
+      <div class="p-3 mb-2 bg-light border">Regular</div>
+      <div class="p-3 mb-2 bg-light border-bottom">Border Bottom</div>
+      <div class="p-3 mb-2 bg-light border-top">Border Top</div>
+      <div class="p-3 mb-2 bg-light border-right">Border Right</div>
+      <div class="p-3 mb-2 bg-light border-left">Border Left</div>
+
+      <br />
+
+      <div class="p-3 mb-2 bg-light border border-primary">Primary</div>
+      <div class="p-3 mb-2 bg-light border border-secondary">Secondary</div>
+      <div class="p-3 mb-2 bg-light border border-success">Success</div>
+      <div class="p-3 mb-2 bg-light border border-info">Info</div>
+      <div class="p-3 mb-2 bg-light border border-warning">Warning</div>
+      <div class="p-3 mb-2 bg-light border border-danger">Danger</div>
+      <div class="p-3 mb-2 bg-light border border-light">Light</div>
+      <div class="p-3 mb-2 bg-light border border-dark">Dark</div>
+      <div class="p-3 mb-2 bg-light border border-white">White</div>
+
+      <br />
+      <br />
+
+      <div class="p-3 mb-2 bg-light border rounded border-success">Rounded</div>
+      <div class="p-3 mb-2 bg-light border rounded-top">Rounded Top</div>
+      <div class="p-3 mb-2 bg-light border rounded-bottom">Rounded Bottom</div>
+      <div class="p-3 mb-2 bg-light border rounded-right">Rounded Right</div>
+      <div class="p-3 mb-2 bg-light border rounded-left">Rounded Left</div>
+      <div class="p-3 mb-2 bg-light w-25 border rounded-circle">
+        Rounded Circle
       </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-column row-hl">
-        <div class="mb-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-column row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="mt-auto p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-nowrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-wrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex row-hl">
-        <div class="order-3 p-2 item-hl">First flex item</div>
-        <div class="order-2 p-2 item-hl">Second flex item</div>
-        <div class="order-1 p-2 item-hl">Third flex item</div>
-      </div>
+      <div class="p-3 mb-2 bg-light border rounded-0">Dark</div>
     </div>
 
     <div style="margin-top: 500px"></div>
