--- a/assignment1/basic_typography.html
+++ b/assignment1/basic_typography.html
@@ -126,90 +126,66 @@
       </div>
       <hr />
     </header>
+
     <div class="container">
-      <div class="d-flex row-hl">
-        <div class="mr-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
+      <h1 class="display-4">Display 1</h1>
+      <h1 class="display-5">Display 2</h1>
+      <h1 class="display-1">Display 3</h1>
+      <h1 class="display-3">Display 4</h1>
+
+      <br />
+      <br />
+
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dolore
+        repellendus veniam consequatur vero numquam voluptatem quam ab expedita
+        eum, ipsam? Necessitatibus dicta quaerat, vitae dolorum, dolor autem
+        reiciendis sapiente.
+      </p>
+
+      <p class="lead">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dolore
+        repellendus veniam consequatur vero numquam voluptatem quam ab expedita
+        eum, ipsam? Necessitatibus dicta quaerat, vitae dolorum, dolor autem
+        reiciendis sapiente.
+      </p>
+
+      <p class="font-weight-normal">Bold Text</p>
+      <p class="font-weight-normal">Normal Text</p>
+      <p class="font-italic">Italic Text</p>
+
+      <p class="text-lowercase">MAKE LOWERCASE</p>
+      <p class="text-uppercase">make uppercase</p>
+      <p class="text-capitalize">make capitalized</p>
+      <p class="text-lowercase">make capitalized</p>
+      <p class="text-uppercase">make capitalized</p>
+
+      <br />
+      <br />
+
+      <div class="text-truncate">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+        repellat nobis sunt qui consequatur architecto veritatis, iure odit,
+        debitis pariatur perspiciatis? Asperiores facere veniam, totam ullam
+        dignissimos voluptate atque! Eos, animi quos. Sint magni nulla provident
+        et consequatur officia tempora!
       </div>
 
       <br />
       <br />
 
-      <div class="d-flex row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="ml-auto p-2 item-hl">Flex item</div>
-      </div>
+      <ul class="list-unstyled">
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+      </ul>
 
-      <br />
-      <br />
-
-      <div class="d-flex flex-column row-hl">
-        <div class="mb-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-column row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="mt-auto p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-nowrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-wrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex row-hl">
-        <div class="order-3 p-2 item-hl">First flex item</div>
-        <div class="order-2 p-2 item-hl">Second flex item</div>
-        <div class="order-1 p-2 item-hl">Third flex item</div>
-      </div>
+      <ul class="list-inline">
+        <li class="list-inline-item">Lorem ipsum</li>
+        <li class="list-inline-item">Lorem ipsum</li>
+        <li class="list-inline-item">Lorem ipsum</li>
+      </ul>
     </div>
 
     <div style="margin-top: 500px"></div>
