--- a/assignment1/forms.html
+++ b/assignment1/forms.html
@@ -127,88 +127,145 @@
       <hr />
     </header>
     <div class="container">
-      <div class="d-flex row-hl">
-        <div class="mr-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
+      <form>
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input
+            class="form-control"
+            type="text"
+            id="name"
+            placeholder="Enter name"
+          />
+        </div>
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input
+            class="form-control form-control-lg"
+            type="email"
+            id="email"
+            placeholder="Enter email"
+          />
+          <small class="form-text text-muted"
+            >Your email will not ever be shared</small
+          >
+        </div>
+        <div class="form-group">
+          <label for="company">Company</label>
+          <input
+            class="form-control form-control-sm"
+            type="text"
+            id="company"
+            placeholder="Enter company name"
+          />
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input
+            class="form-control"
+            type="password"
+            id="password"
+            placeholder="Password"
+            readonly
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="gender">Gender</label>
+          <select class="form-control" id="gender">
+            <option>Male</option>
+            <option>Female</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea class="form-control" id="message" rows="3"></textarea>
+        </div>
+
+        <div class="form-group">
+          <label for="file">File input</label>
+          <input type="file" id="file" class="form-control-file" />
+          <small class="form-text text-muted" id="fileHelp">Max 3mb size</small>
+        </div>
+
+        <div class="custom-file">
+          <input type="file" id="myfile" class="custom-file-input" />
+          <label class="custom-file-label" for="myfile">Choose file</label>
+        </div>
+        <br />
+        <br />
+
+        <div class="form-group">
+          <label for="membership">Membership Level</label>
+          <input
+            class="custom-range"
+            min="1"
+            max="5"
+            step="1"
+            value="1"
+            type="range"
+          />
+        </div>
+
+        <br />
+
+        <button class="btn btn-primary btn-block" type="submit">Submit</button>
+      </form>
+
+      <br />
+      <br />
+
+      <form class="form-inline">
+        <input
+          class="form-control mr-2"
+          type="text"
+          id="username"
+          placeholder="Enter username"
+        />
+        <input
+          class="form-control mr-2"
+          type="text"
+          id="password"
+          placeholder="Password"
+        />
+        <div class="form-check">
+          <label class="form-check-label mr-2">
+            <input type="checkbox" class="form-check-input" /> Remember me
+          </label>
+        </div>
+
+        <button class="btn btn-light" type="submit">Submit</button>
+      </form>
+
+      <br />
+      <br />
+
+      <form>
+        <div class="form-row">
+          <div class="col">
+            <input type="text" class="form-control" placeholder="First name" />
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Last name" />
+          </div>
+        </div>
+      </form>
+
+      <br />
+      <br />
+
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input class="form-control is-valid" type="text" id="username" />
       </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="ml-auto p-2 item-hl">Flex item</div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input class="form-control is-invalid" type="text" id="password" />
+        <div class="invalid-feedback">Password not strong enough</div>
       </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-column row-hl">
-        <div class="mb-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-column row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="mt-auto p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-nowrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex flex-wrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
-
-      <br />
-      <br />
-
-      <div class="d-flex row-hl">
-        <div class="order-3 p-2 item-hl">First flex item</div>
-        <div class="order-2 p-2 item-hl">Second flex item</div>
-        <div class="order-1 p-2 item-hl">Third flex item</div>
+      <div class="form-group">
+        <label for="password2">Confirm Password</label>
+        <input class="form-control is-invalid" type="text" id="password2" />
+        <div class="invalid-feedback">Password does not match</div>
       </div>
     </div>
 
