--- a/assignment1/spacing.html
+++ b/assignment1/spacing.html
@@ -126,89 +126,111 @@
       </div>
       <hr />
     </header>
+
     <div class="container">
-      <div class="d-flex row-hl">
-        <div class="mr-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
+      <h1 class="mb-0 bg-success">Margin Bottom 0</h1>
+      <h1 class="mb-1 bg-success">Margin Bottom 1</h1>
+      <h1 class="mb-2 bg-success">Margin Bottom 2</h1>
+      <h1 class="mb-3 bg-success">Margin Bottom 3</h1>
+      <h1 class="mb-4 bg-success">Margin Bottom 4</h1>
+      <h1 class="mb-5 bg-success">Margin Bottom 5</h1>
+
+      <br />
+      <h1 class="mb-5 bg-success">Margin Bottom 5</h1>
+      <h1 class="mb-4 bg-success">Margin Bottom 4</h1>
+      <h1 class="mb-3 bg-success">Margin Bottom 3</h1>
+      <h1 class="mb-2 bg-success">Margin Bottom 2</h1>
+      <h1 class="mb-1 bg-success">Margin Bottom 1</h1>
+      <h1 class="mb-0 bg-success">Margin Bottom 0</h1>
+      <br />
+
+      <h1 class="mt-0 bg-success">Margin Top 0</h1>
+      <h1 class="mt-1 bg-success">Margin Top 1</h1>
+      <h1 class="mt-2 bg-success">Margin Top 2</h1>
+      <h1 class="mt-3 bg-success">Margin Top 3</h1>
+      <h1 class="mt-4 bg-success">Margin Top 4</h1>
+      <h1 class="mt-5 bg-success">Margin Top 5</h1>
 
       <br />
       <br />
 
-      <div class="d-flex row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="ml-auto p-2 item-hl">Flex item</div>
-      </div>
+      <p>
+        <span class="mr-5 bg-success">Margin Right 5</span> dolor sit amet,
+        <span class="ml-3 bg-success">Margin Left 3 </span> elit. Voluptatum,
+        optio.
+      </p>
 
       <br />
       <br />
 
-      <div class="d-flex flex-column row-hl">
-        <div class="mb-auto p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
+      <p>
+        Lorem ipsum <span class="mx-5 bg-success">Margin Left & Right 5</span>,
+        consectetur elit. Voluptatum, optio.
+      </p>
 
       <br />
       <br />
 
-      <div class="d-flex flex-column row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="mt-auto p-2 item-hl">Flex item</div>
-      </div>
+      <p>Lorem ipsum dolor sit amet, consectetur elit. Voluptatum, optio.</p>
+      <p class="my-5 bg-success">Margin Top & Bottom 5</p>
+      <p>Lorem ipsum dolor sit amet, consectetur elit. Voluptatum, optio.</p>
 
       <br />
       <br />
 
-      <div class="d-flex flex-nowrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
+      <p>Lorem ipsum dolor sit amet, consectetur elit. Voluptatum, optio.</p>
+      <p class="m-5 bg-success">Margin All Sides 5</p>
+      <p>Lorem ipsum dolor sit amet, consectetur elit. Voluptatum, optio.</p>
 
       <br />
       <br />
 
-      <div class="d-flex flex-wrap row-hl">
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-        <div class="p-2 item-hl">Flex item</div>
-      </div>
+      <h1 class="pb-0 bg-warning">Padding Bottom 0</h1>
+      <h1 class="pb-1 bg-warning">Padding Bottom 1</h1>
+      <h1 class="pb-2 bg-warning">Padding Bottom 2</h1>
+      <h1 class="pb-3 bg-warning">Padding Bottom 3</h1>
+      <h1 class="pb-4 bg-warning">Padding Bottom 4</h1>
+      <h1 class="pb-5 bg-warning">Padding Bottom 5</h1>
 
       <br />
       <br />
 
-      <div class="d-flex row-hl">
-        <div class="order-3 p-2 item-hl">First flex item</div>
-        <div class="order-2 p-2 item-hl">Second flex item</div>
-        <div class="order-1 p-2 item-hl">Third flex item</div>
+      <h1 class="pt-0 bg-warning">Padding Top 0</h1>
+      <h1 class="pt-1 bg-warning">Padding Top 1</h1>
+      <h1 class="pt-2 bg-warning">Padding Top 2</h1>
+      <h1 class="pt-3 bg-warning">Padding Top 3</h1>
+      <h1 class="pt-4 bg-warning">Padding Top 4</h1>
+      <h1 class="pt-5 bg-warning">Padding Top 5</h1>
+
+      <br />
+      <br />
+
+      <p>
+        <span class="bg-warning pr-5">Padding Right 5</span> dolor sit amet,
+        <span class="bg-warning pl-3">Padding Left 3 </span> elit. Voluptatum,
+        optio.
+      </p>
+
+      <br />
+      <br />
+
+      <p>
+        Lorem ipsum <span class="px-5 bg-warning">Padding Left & Right 5</span>,
+        consectetur elit. Voluptatum, optio.
+      </p>
+
+      <br />
+      <br />
+
+      <p class="py-5 bg-warning">Padding Top & Bottom 5</p>
+
+      <br />
+      <br />
+
+      <p class="p-3 bg-warning">Padding All Sides 5</p>
+
+      <div class="bg-info mx-auto" style="width: 200px">
+        Horizontal Centering
       </div>
     </div>
 
