--- a/index.html
+++ b/index.html
@@ -1,23 +1,263 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+      integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+      crossorigin="anonymous"
+    />
+
+    <title>Bootstrap Sandbox</title>
   </head>
+
   <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
-    <main>
-      <h1>Home page</h1>
-    </main>
+    <header>
+      <h1 class="display-3 text-center my-4">Navbar & Navs</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="dropdown">
+              <button
+                class="btn btn-primary btn-block dropdown-toggle"
+                type="button"
+                data-toggle="dropdown"
+              >
+                2: Utilities
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="basic_typography.html"
+                  >Basic Typography</a
+                >
+                <a class="dropdown-item" href="text_alignment_display.html"
+                  >Text Alignment & Display</a
+                >
+                <a class="dropdown-item" href="floats_position.html"
+                  >Floats & Position</a
+                >
+                <a class="dropdown-item" href="colors_background.html"
+                  >Colors & Background</a
+                >
+                <a class="dropdown-item" href="spacing.html">Spacing</a>
+                <a class="dropdown-item" href="sizing.html">Sizing</a>
+                <a class="dropdown-item" href="breakpoints.html">
+                  Breakpoints</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="dropdown">
+              <button
+                class="btn btn-success btn-block dropdown-toggle"
+                type="button"
+                data-toggle="dropdown"
+              >
+                3: CSS Components
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="buttons.html">Buttons</a>
+                <a class="dropdown-item" href="navbar.html">Navbar</a>
+                <a class="dropdown-item" href="list_groups_badges.html">
+                  List Groups & Badges</a
+                >
+                <a class="dropdown-item" href="forms.html">Forms</a>
+                <a class="dropdown-item" href="input_groups.html">
+                  Input Groups</a
+                >
+                <a class="dropdown-item" href="alerts_progress.html"
+                  >Alerts & Progress</a
+                >
+                <a class="dropdown-item" href="tables_pagination.html">
+                  Tables & Pagination</a
+                >
+                <a class="dropdown-item" href="cards.html"> Cards</a>
+                <a class="dropdown-item" href="media_object.html"
+                  >Media Objects</a
+                >
+                <a class="dropdown-item" href="jumbotron.html"> Jumbotron</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="dropdown">
+              <button
+                class="btn btn-warning btn-block dropdown-toggle"
+                type="button"
+                data-toggle="dropdown"
+              >
+                4: Grid & Flexbox
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="grid_system.html">Grid System</a>
+                <a class="dropdown-item" href="grid_alignment.html"
+                  >Grid Alignment</a
+                >
+                <a class="dropdown-item" href="flexbox.html">Flexbox</a>
+                <a class="dropdown-item" href="auto_margins_wrapping_order.html"
+                  >Auto Margins & Wrap</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="dropdown">
+              <button
+                class="btn btn-danger btn-block dropdown-toggle"
+                type="button"
+                data-toggle="dropdown"
+              >
+                5: JavaScript Widgets
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="carousel.html">Carousel</a>
+                <a class="dropdown-item" href="collapse.html">Collapse</a>
+                <a class="dropdown-item" href="tooltips.html">Tooltips</a>
+                <a class="dropdown-item" href="popovers.html">Popovers</a>
+                <a class="dropdown-item" href="modals.html">Modals</a>
+                <a class="dropdown-item" href="scrollspy.html">ScrollSpy</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr />
+    </header>
+    <div class="container">
+      <div class="alert alert-danger">
+        <strong>Primary</strong> Blog post added
+      </div>
+
+      <div class="alert alert-success">
+        <strong>Secondary</strong> Blog post added
+      </div>
+
+      <div class="alert alert-primary">
+        <strong>Success</strong> Blog post added
+      </div>
+
+      <div class="alert alert-secondary">
+        <strong>Danger</strong> Please check the log files
+      </div>
+
+      <div class="alert alert-info">
+        <strong>Info</strong> You have a new message
+      </div>
+
+      <div class="alert alert-dismissible">
+        <strong>Warning</strong> Please check the log files
+      </div>
+
+      <div class="alert alert-dark">
+        <strong>Light</strong> Please check the log files
+      </div>
+
+      <div class="alert alert-light">
+        <strong>Dark</strong> Please check the log files
+      </div>
+
+      <div class="alert alert-success alert-dismissible">
+        <button class="close" type="button" data-dismiss="alert">
+          <span>&times;</span>
+        </button>
+        <strong>Dismissable</strong> Blog post added
+      </div>
+
+      <div class="alert alert-success">
+        <h4 class="alert-heading">Congrats!</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+          dignissimos eius, sit quo assumenda totam commodi ipsum saepe
+          molestias eligendi exercitationem repudiandae qui facilis deserunt
+          non, harum ab quam? Cumque
+        </p>
+        <hr />
+        <p class="mb-0">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, odio?
+        </p>
+      </div>
+
+      <br />
+      <br />
+
+      <div class="progress">
+        <div class="progress-bar" style="width: 45%"></div>
+      </div>
+      <br />
+      <div class="progress">
+        <div class="progress-bar" style="width: 65%">65%</div>
+      </div>
+      <br />
+      <div class="progress">
+        <div class="progress-bar bg-success" style="width: 75%"></div>
+      </div>
+      <br />
+      <div class="progress">
+        <div class="progress-bar bg-info" style="width: 25%"></div>
+      </div>
+      <br />
+      <div class="progress">
+        <div class="progress-bar bg-warning" style="width: 55%"></div>
+      </div>
+      <br />
+
+      <div class="progress" style="height: 1px">
+        <div class="progress-bar bg-success" style="width: 65%"></div>
+      </div>
+      <br />
+
+      <div class="progress">
+        <div
+          class="progress-bar bg-danger progress-bar-striped"
+          style="width: 55%"
+        ></div>
+      </div>
+      <br />
+
+      <div class="progress">
+        <div
+          class="
+            progress-bar
+            bg-info
+            progress-bar-striped progress-bar-animated
+          "
+          style="width: 65%"
+        ></div>
+      </div>
+      <br />
+
+      <div class="progress">
+        <div class="progress-bar bg-warning" style="width: 55%"></div>
+        <div class="progress-bar bg-success" style="width: 55%"></div>
+        <div class="progress-bar bg-primary" style="width: 55%"></div>
+      </div>
+    </div>
+
+    <div style="margin-top: 500px"></div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+      integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+      crossorigin="anonymous"
+    ></script>
+
+    <script>
+      $('#myAlert').on('closed.bs.alert', function () {
+        console.log('Alert closed...');
+      });
+    </script>
   </body>
 </html>
